force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/T_Performance_Target_Product_by_Team__c.object-meta.xml
<CustomObject>
    <label>T-Performance Target Product by Team</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>T-Performance Target Product by Team Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T-Performance Target Product by Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>