force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Actual_Amount_with_Capmax__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_with_Capmax__c</fullName>
    <label>Actual Amount with Capmax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>