force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Branch_Point_Engine__c.field-meta.xml
<CustomField>
    <fullName>Branch_Point_Engine__c</fullName>
    <label>Branch_Team_RV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>