force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Mortgage Loan Sales</fullName>
            </value>
            <value>
                <fullName>Wealth Banking</fullName>
            </value>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Retail Advisory Line</fullName>
            </value>
            <value>
                <fullName>Unsecured Lending Line</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>RPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>