force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Group_Channel__c.field-meta.xml
<CustomField>
    <fullName>Group_Channel__c</fullName>
    <label>Group of Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBD</fullName>
            </value>
            <value>
                <fullName>RASC</fullName>
            </value>
            <value>
                <fullName>ttb consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>