force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Indicator_Level1__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Level1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator_Level1</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>