force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Product_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>