force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product List</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>