force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rank</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>