force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>