force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Target_Unit_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_Year__c</fullName>
    <label>Target Unit Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>