force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Unique_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_External_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>