force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/fields/Volumn__c.field-meta.xml
<CustomField>
    <fullName>Volumn__c</fullName>
    <label>Volumn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>