force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/recordTypes/level_branch.recordType-meta.xml
<RecordType>
    <fullName>level_branch</fullName>
    <active>true</active>
    <label>level_branch</label>
</RecordType>