force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/recordTypes/level_group_of_channel.recordType-meta.xml
<RecordType>
    <fullName>level_group_of_channel</fullName>
    <active>true</active>
    <label>level_group_of_channel</label>
</RecordType>