force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/recordTypes/level_region.recordType-meta.xml
<RecordType>
    <fullName>level_region</fullName>
    <active>true</active>
    <label>level_region</label>
</RecordType>