force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/recordTypes/level_retail.recordType-meta.xml
<RecordType>
    <fullName>level_retail</fullName>
    <active>true</active>
    <label>level_retail</label>
</RecordType>