force-app/main/default/objects/T_Performance_Target_Product_by_Team__c/recordTypes/level_zone.recordType-meta.xml
<RecordType>
    <fullName>level_zone</fullName>
    <active>true</active>
    <label>level_zone</label>
</RecordType>